# Antigravity-Manager

.github/workflows/: release-cli.yml  release.yml
src-tauri/: Cargo.toml
src-tauri/src/: error.rs  lib.rs
src-tauri/src/modules/: mod.rs
src-tauri/src/proxy/: config.rs  monitor.rs
src/pages/: ApiProxy.tsx
src/services/: accountService.ts
