[package]
name = "antigravity_tools"
version = "3.3.15"
description = "A Tauri App"
authors = ["you"]
license = "CC-BY-NC-SA-4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["gui"]
gui = [
    "dep:tauri",
    "dep:tauri-build",
    "dep:tauri-plugin-opener",
    "dep:tauri-plugin-dialog",
    "dep:tauri-plugin-fs",
    "dep:tauri-plugin-single-instance",
    "dep:tauri-plugin-autostart",
    "dep:image",
]

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "antigravity_tools_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "antigravity-cli"
path = "src/bin/cli.rs"
required-features = []

[build-dependencies]
tauri-build = { version = "2", features = [], optional = true }

[dependencies]
# Tauri 相关 (GUI only)
tauri = { version = "2", features = ["tray-icon", "image-png"], optional = true }
tauri-plugin-opener = { version = "2", optional = true }
tauri-plugin-dialog = { version = "2.4.2", optional = true }
tauri-plugin-fs = { version = "2.4.4", optional = true }
tauri-plugin-single-instance = { version = "2.3.6", features = ["deep-link"], optional = true }
tauri-plugin-autostart = { version = "2.5.1", optional = true }
image = { version = "0.25.9", optional = true }

# 核心依赖 (GUI + CLI 共用)
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = "0.4"
dirs = "5.0"
reqwest = { version = "0.12", features = ["json", "stream", "socks"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "time"] }
rusqlite = { version = "0.32", features = ["bundled"] }
base64 = "0.22"
sysinfo = "0.31"
tokio = { version = "1", features = ["full"] }
url = "2.5.7"
thiserror = "2.0.17"
once_cell = "1.19"
tracing-appender = "0.2.4"
tracing-log = "0.2.0"

# 反代服务依赖
axum = { version = "0.7", features = ["multipart"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }

hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
eventsource-stream = "0.2"
dashmap = "6.1"
anyhow = "1.0"
futures = "0.3"
rand = "0.8"
async-stream = "0.3.6"
regex = "1.12.2"
pin-project = "1.1"
bytes = "1.5"
sha2 = "0.10"

# CLI 依赖
clap = { version = "4", features = ["derive"] }
comfy-table = "7"
